<resources>
    <string name="app_name">QuizApp</string>
    <string name="tittle">Physics</string>
    <string name="name_text">Your Name</string>
    <string name="question1">What is the definition of physics?</string>
    <string name="answer1_1">It is the natural science that studies the fundamental components and interactions of the universe, energy, matter and space-time.</string>
    <string name="answer1_2">Science that studies the structure, composition, and properties of the matter. Also seek the chemical reactions that are present in the matter and the relation with the energy.</string>
    <string name="answer1_3">It’s the formal Science, that use logic to study properties and relations between numbers, geometric shapes…</string>
    <string name="question2">Which are the investigating branches that belong to the subject of physics?</string>
    <string name="answer2_1">Thermodynamics</string>
    <string name="answer2_2">Quantum mechanics</string>
    <string name="answer2_3">Scientology</string>
    <string name="answer2_4">Astronomy</string>
    <string name="question3">Which of this countries are members of the European organization for nuclear research (CERN)?</string>
    <string name="answer3_1">China</string>
    <string name="answer3_2">Spain</string>
    <string name="answer3_3">Italy</string>
    <string name="answer3_4">Belgium</string>
    <string name="answer3_5">Germany</string>
    <string name="question4">In what year was found the CERN?</string>
    <string name="answer4">Year</string>
    <string name="answerDigits">0123456789</string>
    <string name="send_button">Results</string>
    <string name="reset_button">Try Again</string>
    <string name="alertTittle">Results</string>
    <string name="okText">OK</string>
    <string name="test">0</string>
</resources>